<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.asmaa.asmaa_task2_taboogh.Activities.TermsConditionActivity"
    style="@style/Container"
    >
    <ScrollView
        android:layout_below="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            style="@style/linearContent">



            <TextView
                android:drawableStart="@drawable/dot"
                style="@style/StyleParagraph"
                android:text="@string/info_aboutUs1"
                />

            <TextView
                android:drawableStart="@drawable/dot"
                android:text="@string/info_aboutUs3"
                style="@style/StyleParagraph"
                />

            <TextView
                android:drawableStart="@drawable/dot"
                android:text="@string/info_aboutUs2"
                style="@style/StyleParagraph" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        style="@style/LinearTitle"
        android:id="@id/layout_title">


        <TextView
            android:text="@string/termscondition"
            style="@style/Title"
            />
    </LinearLayout>


</RelativeLayout>
