<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_contact_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroun_app"

    tools:context="com.example.asmaa.asmaa_task2_taboogh.Activities.Contact_usV2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textAllCaps="true"
        android:fontFamily="monospace"
        android:id="@+id/textView"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/layout_input" />

    <LinearLayout
        android:id="@+id/layout_input"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:drawableLeft="@drawable/avatar"
            android:drawablePadding="5dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/editText3" />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <EditText
            android:layout_width="match_parent"
            android:textColorHint="@color/colorPrimaryDark"
            android:drawablePadding="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:drawableLeft="@drawable/mail"
            android:id="@+id/editText4" />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Subject"
            android:textColorHint="@color/colorPrimaryDark"

            android:id="@+id/editText"
            android:fontFamily="serif" />
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <EditText
            android:hint="@string/Message"
            android:gravity="top"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:height="155dp"
            android:id="@+id/editText2" />



        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <Button
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/Send"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawableBottom="@drawable/send"
            android:paddingTop="5dp"

            android:id="@+id/button" />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_icon"
        android:id="@+id/imageView3"
         android:layout_above="@id/layout_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

</RelativeLayout>
